--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
     </nav>
 
     <header class="header">
-      <div class="header-top">
-        <div class="header-top__greeting">
+      <div class="header-top margin-t">
+        <div class="header-top__greeting margin-l">
           <h1 class="big-title">Bonjour,</h1>
           <p class="text-normal">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
@@ -32,13 +32,13 @@
           </p>
         </div>
         <div class="header-top__yt">
-          <p>For a random, coding-friendly song</p>
+          <p>For a coding-friendly song</p>
           <button class="header-top__button">Click here</button>
         </div>
       </div>
-      <div class="header-bottom">
+      <div class="header-bottom margin-t">
         <div class="header-bottom__title-container">
-          <h2 class="medium-title medium-title--secondary">
+          <h2 class="medium-title medium-title--secondary margin-l">
             Sonata in Git Major
           </h2>
         </div>
