--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,54 @@
             Sonata in Git Major
           </h2>
         </div>
-        <div>Notes</div>
+
+        <div class="header-bottom__music">
+          <div class="staff"></div>
+
+          <div class="staff">
+            <div class="note note--2 note--secondary"></div>
+            <div class="note note--3 note--secondary"></div>
+            <div class="note note--11 note--secondary"></div>
+            <div class="note note--12 note--secondary"></div>
+          </div>
+
+          <div class="staff">
+            <div class="git-staff git-staff--1"></div>
+            <div class="note note--1 note--primary"></div>
+            <div class="note note--4 note--primary"></div>
+            <div class="note note--8 note--primary"></div>
+            <div class="note note--9 note--primary"></div>
+            <div class="note note--10 note--primary"></div>
+            <div class="note note--13 note--primary"></div>
+            <div class="note note--18 note--primary"></div>
+          </div>
+
+          <div class="staff">
+            <div class="note note--5 note--tertiary">
+              <div class="double-croche"></div>
+            </div>
+            <div class="note note--6 note--tertiary">
+              <div class="double-croche"></div>
+            </div>
+            <div class="note note--7 note--tertiary"></div>
+            <div class="note note--14 note--tertiary">
+              <div class="double-croche"></div>
+            </div>
+            <div class="note note--15 note--tertiary">
+              <div class="double-croche"></div>
+            </div>
+            <div class="note note--16 note--tertiary"></div>
+          </div>
+
+          <div class="staff">
+            <div class="note note--5 note--secondary"></div>
+            <div class="note note--7 note--secondary"></div>
+            <div class="note note--8 note--secondary"></div>
+            <div class="note note--14 note--secondary"></div>
+            <div class="note note--16 note--secondary"></div>
+            <div class="note note--17 note--secondary"></div>
+          </div>
+        </div>
       </div>
     </header>
   </body>
