--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,8 @@
             <div class="note note--3 note--secondary"></div>
             <div class="note note--11 note--secondary"></div>
             <div class="note note--12 note--secondary"></div>
+            <div class="note note--19 note--secondary"></div>
+            <div class="note note--20 note--secondary"></div>
           </div>
 
           <div class="staff">
@@ -62,6 +64,7 @@
             <div class="note note--10 note--primary"></div>
             <div class="note note--13 note--primary"></div>
             <div class="note note--18 note--primary"></div>
+            <div class="note note--21 note--primary"></div>
           </div>
 
           <div class="staff">
