layout for about section

--- a/src/index.html
+++ b/src/index.html
@@ -38,9 +38,7 @@
       </div>
       <div class="header-bottom margin-t">
         <div class="header-bottom__title-container">
-          <h2 class="medium-title medium-title--secondary margin-l">
-            Sonata in Git Major
-          </h2>
+          <h2 class="medium-title margin-l">Sonata in Git Major</h2>
         </div>
 
         <div class="header-bottom__music">
@@ -95,5 +93,30 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="margin-t">
+        <div class="about__title-container">
+          <h2 class="about__title medium-title margin-l">About</h2>
+        </div>
+        <div class="about margin-l">
+          <p class="about__text text-normal">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+            deserunt eum nostrum nesciunt inventore? Vel voluptatum veniam
+            dolore nobis, deserunt, vitae facilis officiis totam incidunt
+            mollitia architecto voluptates similique quam? Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Explicabo deserunt eum nostrum
+            nesciunt inventore? Vel voluptatum veniam dolore nobis, deserunt,
+            vitae facilis officiis totam incidunt mollitia architecto voluptates
+            similique quam? Lorem ipsum dolor sit amet consectetur adipisicing
+            elit. Explicabo deserunt eum nostrum nesciunt inventore? Vel
+            voluptatum veniam dolore nobis, deserunt, vitae facilis officiis
+            totam incidunt mollitia architecto voluptates similique quam?
+          </p>
+          <p class="about__skills">SKILLS</p>
+          <p class="about__education">EDUCATION</p>
+          <p class="about__experience">EXPERIENCE</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
