--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,25 @@
             totam incidunt mollitia architecto voluptates similique quam?
           </p>
           <p class="about__skills">SKILLS</p>
-          <p class="about__education">EDUCATION</p>
+
+          <div class="about__education">
+            <div class="education__left">
+              <h3 class="about__list about__date">2010</h3>
+              <h3 class="about__list about__date">2010</h3>
+              <h3 class="about__list about__date">2010</h3>
+            </div>
+            <div class="education__right">
+              <h2 class="small-title about__skills__title">Education</h2>
+
+              <h3 class="about__list about__degree">React Redux</h3>
+
+              <h3 class="about__list about__degree">Front-End Nanodegree</h3>
+
+              <h3 class="about__list about__degree">
+                Musicology Master's Degree
+              </h3>
+            </div>
+          </div>
           <p class="about__experience">EXPERIENCE</p>
         </div>
       </section>
