About section completed - Skills tree to do

--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
     <main>
       <section class="margin-t">
         <div class="about__title-container">
-          <h2 class="about__title medium-title margin-l">About</h2>
+          <h2 class="medium-title margin-l">About</h2>
         </div>
         <div class="about margin-l">
           <p class="about__text text-normal">
@@ -112,27 +112,63 @@
             voluptatum veniam dolore nobis, deserunt, vitae facilis officiis
             totam incidunt mollitia architecto voluptates similique quam?
           </p>
-          <p class="about__skills">SKILLS</p>
 
-          <div class="about__education">
-            <div class="education__left">
-              <h3 class="about__list about__date">2010</h3>
-              <h3 class="about__list about__date">2010</h3>
-              <h3 class="about__list about__date">2010</h3>
+          <div class="about__skills about__content">
+            <h2 class="about__title small-title line">Skills</h2>
+          </div>
+
+          <div class="about__education about__content">
+            <h2 class="about__title small-title line">Education</h2>
+            <h3 class="about__date">2020</h3>
+            <div class="about__item line">
+              <h3>React & Redux</h3>
+              <ul class="about__list">
+                <li>React</li>
+                <li>Redux</li>
+                <li>Axios</li>
+                <li>React Hooks</li>
+              </ul>
             </div>
-            <div class="education__right">
-              <h2 class="small-title about__skills__title">Education</h2>
-
-              <h3 class="about__list about__degree">React Redux</h3>
-
-              <h3 class="about__list about__degree">Front-End Nanodegree</h3>
-
-              <h3 class="about__list about__degree">
-                Musicology Master's Degree
-              </h3>
+            <h3 class="about__date">2019</h3>
+            <div class="about__item line">
+              <h3>Frontend Nanodegree</h3>
+              <ul class="about__list">
+                <li>HTML</li>
+                <li>CSS/SASS</li>
+                <li>JavaScript, ES6</li>
+                <li>NodeJs, Express</li>
+                <li>Jest</li>
+                <li>Webpack</li>
+              </ul>
+            </div>
+            <h3 class="about__date">2010</h3>
+            <div class="about__item line">
+              <h3>Musicology Master's Degree</h3>
             </div>
           </div>
-          <p class="about__experience">EXPERIENCE</p>
+
+          <div class="about__experience about__content">
+            <h2 class="about__title small-title line">Experience</h2>
+            <h3 class="about__date">2020</h3>
+            <div class="about__item line">
+              <h3>Frontend React Internship</h3>
+              <ul class="about__list">
+                <li>React</li>
+                <li>Redux</li>
+                <li>Bootstrap</li>
+                <li>Webpack Encore</li>
+              </ul>
+            </div>
+            <h3 class="about__date">2019</h3>
+            <div class="about__item line">
+              <h3>Law Library Assistant</h3>
+              <ul class="about__list">
+                <li>Loan Management</li>
+                <li>Data entry</li>
+                <li>Research trainer</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
     </main>
