--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,11 @@
 
         <div class="header-bottom__music">
           <div class="staff"></div>
-
           <div class="staff">
+            <div class="git-staff git-staff--2">
+              <div class="curve-top-l curve-top-l--1"></div>
+              <div class="curve-top-r curve-top-r--1"></div>
+            </div>
             <div class="note note--2 note--secondary"></div>
             <div class="note note--3 note--secondary"></div>
             <div class="note note--11 note--secondary"></div>
@@ -52,9 +55,12 @@
             <div class="note note--19 note--secondary"></div>
             <div class="note note--20 note--secondary"></div>
           </div>
-
           <div class="staff">
-            <div class="git-staff git-staff--1"></div>
+            <div class="git-staff git-staff--1">
+              <div class="curve-bottom-r curve-bottom-r--1"></div>
+              <div class="curve-bottom-l curve-bottom-l--1"></div>
+              <div class="curve-top-r curve-top-r--2"></div>
+            </div>
             <div class="note note--1 note--primary"></div>
             <div class="note note--4 note--primary"></div>
             <div class="note note--8 note--primary"></div>
@@ -64,8 +70,11 @@
             <div class="note note--18 note--primary"></div>
             <div class="note note--21 note--primary"></div>
           </div>
-
           <div class="staff">
+            <div class="git-staff git-staff--3">
+              <div class="curve-bottom-l curve-bottom-l--2"></div>
+              <div class="curve-bottom-r curve-bottom-r--2"></div>
+            </div>
             <div class="note note--5 note--tertiary">
               <div class="double-croche"></div>
             </div>
@@ -81,7 +90,6 @@
             </div>
             <div class="note note--16 note--tertiary"></div>
           </div>
-
           <div class="staff">
             <div class="note note--5 note--secondary"></div>
             <div class="note note--7 note--secondary"></div>
