music lines almost done

--- a/src/index.html
+++ b/src/index.html
@@ -42,11 +42,17 @@
         </div>
 
         <div class="header-bottom__music">
+          <!--STAFF 1 TOP-->
           <div class="staff"></div>
+          <!--STAFF 2-->
           <div class="staff">
-            <div class="git-staff git-staff--2">
-              <div class="curve-top-l curve-top-l--1"></div>
-              <div class="curve-top-r curve-top-r--1"></div>
+            <div class="git-line git-line--2">
+              <div class="curve top-l top-l--1"></div>
+              <div class="curve top-r top-r--1"></div>
+            </div>
+            <div class="git-line git-line--5">
+              <div class="curve top-l top-l--4"></div>
+              <div class="curve top-r top-r--3"></div>
             </div>
             <div class="note note--2 note--secondary"></div>
             <div class="note note--3 note--secondary"></div>
@@ -55,11 +61,18 @@
             <div class="note note--19 note--secondary"></div>
             <div class="note note--20 note--secondary"></div>
           </div>
+          <!--STAFF 3 MIDDLE -->
           <div class="staff">
-            <div class="git-staff git-staff--1">
-              <div class="curve-bottom-r curve-bottom-r--1"></div>
-              <div class="curve-bottom-l curve-bottom-l--1"></div>
-              <div class="curve-top-r curve-top-r--2"></div>
+            <div class="git-line git-line--1">
+              <div class="curve bottom-r bottom-r--1"></div>
+              <div class="curve bottom-l bottom-l--1"></div>
+              <div class="curve top-r top-r--2"></div>
+              <div class="curve top-l top-l--2"></div>
+              <div class="curve top-l top-l--3"></div>
+              <div class="curve bottom-r bottom-r--4"></div>
+              <div class="curve bottom-l bottom-l--4"></div>
+              <div class="curve top-r top-r--4"></div>
+              <div class="curve top-l top-l--5"></div>
             </div>
             <div class="note note--1 note--primary"></div>
             <div class="note note--4 note--primary"></div>
@@ -70,10 +83,15 @@
             <div class="note note--18 note--primary"></div>
             <div class="note note--21 note--primary"></div>
           </div>
+          <!--STAFF 4 -->
           <div class="staff">
-            <div class="git-staff git-staff--3">
-              <div class="curve-bottom-l curve-bottom-l--2"></div>
-              <div class="curve-bottom-r curve-bottom-r--2"></div>
+            <div class="git-line git-line--3">
+              <div class="curve bottom-l bottom-l--2"></div>
+              <div class="curve bottom-r bottom-r--2"></div>
+            </div>
+            <div class="git-line git-line--6">
+              <div class="curve bottom-l bottom-l--5"></div>
+              <div class="curve bottom-r bottom-r--5"></div>
             </div>
             <div class="note note--5 note--tertiary">
               <div class="double-croche"></div>
@@ -90,7 +108,16 @@
             </div>
             <div class="note note--16 note--tertiary"></div>
           </div>
+          <!--STAFF 5 BOTTOM -->
           <div class="staff">
+            <div class="git-line git-line--4">
+              <div class="curve bottom-l bottom-l--3"></div>
+              <div class="curve bottom-r bottom-r--3"></div>
+            </div>
+            <div class="git-line git-line--7">
+              <div class="curve bottom-l bottom-l--6"></div>
+              <div class="curve bottom-r bottom-r--6"></div>
+            </div>
             <div class="note note--5 note--secondary"></div>
             <div class="note note--7 note--secondary"></div>
             <div class="note note--8 note--secondary"></div>
