score completed, imported as responsive image

--- a/src/index.html
+++ b/src/index.html
@@ -40,94 +40,10 @@
         <div class="header-bottom__title-container">
           <h2 class="medium-title margin-l">Sonata in Git Major</h2>
         </div>
-
-        <div class="header-bottom__music">
-          <!--STAFF 1 TOP-->
-          <div class="staff"></div>
-          <!--STAFF 2-->
-          <div class="staff">
-            <div class="git-line git-line--2">
-              <div class="curve top-l top-l--1"></div>
-              <div class="curve top-r top-r--1"></div>
-            </div>
-            <div class="git-line git-line--5">
-              <div class="curve top-l top-l--4"></div>
-              <div class="curve top-r top-r--3"></div>
-            </div>
-            <div class="note note--2 note--secondary"></div>
-            <div class="note note--3 note--secondary"></div>
-            <div class="note note--11 note--secondary"></div>
-            <div class="note note--12 note--secondary"></div>
-            <div class="note note--19 note--secondary"></div>
-            <div class="note note--20 note--secondary"></div>
-          </div>
-          <!--STAFF 3 MIDDLE -->
-          <div class="staff">
-            <div class="git-line git-line--1">
-              <div class="curve bottom-r bottom-r--1"></div>
-              <div class="curve bottom-l bottom-l--1"></div>
-              <div class="curve top-r top-r--2"></div>
-              <div class="curve top-l top-l--2"></div>
-              <div class="curve top-l top-l--3"></div>
-              <div class="curve bottom-r bottom-r--4"></div>
-              <div class="curve bottom-l bottom-l--4"></div>
-              <div class="curve top-r top-r--4"></div>
-              <div class="curve top-l top-l--5"></div>
-            </div>
-            <div class="note note--1 note--primary"></div>
-            <div class="note note--4 note--primary"></div>
-            <div class="note note--8 note--primary"></div>
-            <div class="note note--9 note--primary"></div>
-            <div class="note note--10 note--primary"></div>
-            <div class="note note--13 note--primary"></div>
-            <div class="note note--18 note--primary"></div>
-            <div class="note note--21 note--primary"></div>
-          </div>
-          <!--STAFF 4 -->
-          <div class="staff">
-            <div class="git-line git-line--3">
-              <div class="curve bottom-l bottom-l--2"></div>
-              <div class="curve bottom-r bottom-r--2"></div>
-            </div>
-            <div class="git-line git-line--6">
-              <div class="curve bottom-l bottom-l--5"></div>
-              <div class="curve bottom-r bottom-r--5"></div>
-            </div>
-            <div class="note note--5 note--tertiary">
-              <div class="double-croche"></div>
-            </div>
-            <div class="note note--6 note--tertiary">
-              <div class="double-croche"></div>
-            </div>
-            <div class="note note--7 note--tertiary"></div>
-            <div class="note note--14 note--tertiary">
-              <div class="double-croche"></div>
-            </div>
-            <div class="note note--15 note--tertiary">
-              <div class="double-croche"></div>
-            </div>
-            <div class="note note--16 note--tertiary"></div>
-          </div>
-          <!--STAFF 5 BOTTOM -->
-          <div class="staff">
-            <div class="git-line git-line--4">
-              <div class="curve bottom-l bottom-l--3"></div>
-              <div class="curve bottom-r bottom-r--3"></div>
-            </div>
-            <div class="git-line git-line--7">
-              <div class="curve bottom-l bottom-l--6"></div>
-              <div class="curve bottom-r bottom-r--6"></div>
-            </div>
-            <div class="note note--5 note--secondary"></div>
-            <div class="note note--7 note--secondary"></div>
-            <div class="note note--8 note--secondary"></div>
-            <div class="note note--14 note--secondary"></div>
-            <div class="note note--16 note--secondary"></div>
-            <div class="note note--17 note--secondary"></div>
-          </div>
-        </div>
+        <div id="music-box" class="header-bottom__score-wrapper"></div>
       </div>
     </header>
+
     <main>
       <section class="margin-t">
         <div class="about__title-container">
