about section done

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     </header>
 
     <main>
-      <section class="margin-t">
+      <section class="section-wrapper margin-t">
         <div class="about__title-container">
           <h2 class="medium-title margin-l">About</h2>
         </div>
@@ -64,9 +64,7 @@
             totam incidunt mollitia architecto voluptates similique quam?
           </p>
 
-          <div class="about__skills about__content">
-            <h2 class="about__title small-title line">Skills</h2>
-          </div>
+          <div class="about__skills" id="skills"></div>
 
           <div class="about__education about__content">
             <h2 class="about__title small-title line">Education</h2>
