--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,12 @@
         <a class="navigation__link" href="#">Olivia Hick</a>
       </h1>
       <ul class="navigation__list">
-        <li><a class="navigation__link" href="#about">About</a></li>
-        <li><a class="navigation__link" href="#">Contact</a></li>
+        <li>
+          <a class="navigation__link small-link" href="#about">About</a>
+        </li>
+        <li>
+          <a class="navigation__link small-link" href="#contact">Contact</a>
+        </li>
       </ul>
     </nav>
 
@@ -35,7 +39,13 @@
             de Belgique, établie à <b>Nantes</b>, appréciant créer des choses de
             mes propres mains, la musique, et <i>les frites</i>. N'hésitez pas à
             jeter un oeil au
-            <a class="header-top__link" href="#">repo github</a> de ce site.
+            <a
+              class="header-top__link small-link"
+              href="https://github.com/ohick/portfolio"
+              target="_blank"
+              >repo github</a
+            >
+            de ce site.
           </p>
         </div>
         <div class="header-top__yt">
@@ -132,5 +142,18 @@
       </section>
       <button class="scroll-button" id="scrollToTopBtn">&uarr;<br /></button>
     </main>
+
+    <footer class="footer margin-t" id="contact">
+      <h1 class="footer__title margin-l margin-t">Contact Me</h1>
+      <ul class="footer__list line">
+        <li class="small-title">Olivia Hick</li>
+        <li>
+          50 Rue du Calvaire de Grillaud<br />
+          44100 Nantes
+        </li>
+        <li>06 22 10 40 24</li>
+        <li>oliviahick1@gmail.com</li>
+      </ul>
+    </footer>
   </body>
 </html>
