--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,7 @@
           </div>
         </div>
         <div class="apibox">
-          <!-- <p>For a coding-friendly song</p> -->
-          <button class="apibox__button">woof ?</button>
-          <button class="apibox__button">meow ?</button>
+          <button class="apibox__button" id="meow">meow ?</button>
         </div>
       </div>
       <div class="header-bottom margin-t">
