--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
-    <title>Hello there</title>
+    <title>Olivia Hick</title>
   </head>
   <body>
     <nav class="navigation" id="nav">
